force-app/main/default/objects/OpportunityLineItem/fields/Allied_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Allied_Product_Type__c</fullName>
    <description>Categorization of Allied Products</description>
    <inlineHelpText>Categorization of Allied Products - should be entered when choosing Allied Product LOB on the opportunity</inlineHelpText>
    <label>Allied Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Allied Product</fullName>
            </value>
            <value>
                <fullName>Bulk WWF</fullName>
            </value>
            <value>
                <fullName>Bulk AF</fullName>
            </value>
            <value>
                <fullName>Drum WWF</fullName>
            </value>
            <value>
                <fullName>Drum AF</fullName>
            </value>
            <value>
                <fullName>Compliance Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>