force-app/main/default/objects/OpportunityLineItem/fields/Annualized_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Gallons__c</fullName>
    <formula>if(NULLVALUE(Service_Term__c, 0) = 0,Product_Gallons__c, Product_Gallons__c  *(52/ Service_Term__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>