force-app/main/default/objects/OpportunityLineItem/fields/Annualized_Pounds__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Pounds__c</fullName>
    <description>Annualized Pounds based of service term</description>
    <formula>if(NULLVALUE(Service_Term__c, 0) = 0,Product_Pounds__c, Product_Pounds__c *(52/ Service_Term__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Pounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>