force-app/main/default/objects/OpportunityLineItem/fields/Annualized_Service__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Service__c</fullName>
    <formula>if( NULLVALUE(Service_Term__c, 0) = 0,UnitPrice * Quantity , UnitPrice * Quantity * (52 / Service_Term__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>