force-app/main/default/objects/OpportunityLineItem/fields/Backhaul_Lane__c.field-meta.xml
<CustomField>
    <fullName>Backhaul_Lane__c</fullName>
    <label>Backhaul Lane</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
			<value>
                <fullName>Not Backhaul</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Benicia, CA</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Cincinnati, OH</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Clackamas, OR</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Delta, BC</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Kent, WA</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Mason, MI</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Phoenix, AZ</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Reidsville, NC</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Sacramento, CA</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - San Jose, CA</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Seattle, WA</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - SPOKANE, WA</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - Tacoma, WA</fullName>
            </value>
            <value>
                <fullName>Aragonite, UT - West Sacramento, CA</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Avon, NY</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Baltimore, MD</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Braintree, MA</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Bridgeport, NJ</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Bristol, CT</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Caseyville, IL</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Cohoes, NY</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Cranston, RI</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Lackawanna, NY</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Linden, NJ</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Mason, MI</fullName>
            </value>
            <value>
                <fullName>Cincinnati, OH - Syracuse, NY</fullName>
            </value>
            <value>
                <fullName>Clive, UT - Carson, CA</fullName>
            </value>
            <value>
                <fullName>Clive, UT - Clackamas, OR</fullName>
            </value>
            <value>
                <fullName>Clive, UT - Fresno, CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>