force-app/main/default/objects/OpportunityLineItem/fields/CloneSourceId__c.field-meta.xml
<CustomField>
    <fullName>CloneSourceId__c</fullName>
    <label>CloneSourceId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>