force-app/main/default/objects/OpportunityLineItem/fields/Direct_Lube_Details__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lube_Details__c</fullName>
    <formula>if(isblank(text(Direct_Lube_Product__c)),&quot;&quot;,text(Direct_Lube_Product__c) + &quot; | &quot; +  text(Direct_Lube_Family__c) + &quot; | &quot; + text(Direct_Lube_UOM__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Lube Details</label>
    <type>Text</type>
</CustomField>