force-app/main/default/objects/OpportunityLineItem/fields/Direct_Lube_Family__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lube_Family__c</fullName>
    <label>Direct Lube Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Direct_Lube_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATF</fullName>
            </value>
            <value>
                <fullName>Automotive Gear Oil</fullName>
            </value>
            <value>
                <fullName>PCEO</fullName>
            </value>
            <value>
                <fullName>HDDEO</fullName>
            </value>
            <value>
                <fullName>Railroad Oils</fullName>
            </value>
            <value>
                <fullName>UTF</fullName>
            </value>
            <value>
                <fullName>Tractor 303</fullName>
            </value>
            <value>
                <fullName>Chain Oil</fullName>
            </value>
            <value>
                <fullName>Gear Oil</fullName>
            </value>
            <value>
                <fullName>Grease</fullName>
            </value>
            <value>
                <fullName>Hydraulic</fullName>
            </value>
            <value>
                <fullName>Process Oils</fullName>
            </value>
            <value>
                <fullName>Way Oils</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>