force-app/main/default/objects/OpportunityLineItem/fields/Direct_Lube_Product__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lube_Product__c</fullName>
    <label>Direct Lube Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Heavy Duty</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Grease</fullName>
            </value>
            <value>
                <fullName>Hydraulic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>