force-app/main/default/objects/OpportunityLineItem/fields/Direct_Lube_UOM__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lube_UOM__c</fullName>
    <label>Direct Lube UOM</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Direct_Lube_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>Pail</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Tote</fullName>
            </value>
            <value>
                <fullName>Keg</fullName>
            </value>
            <value>
                <fullName>Tube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>