force-app/main/default/objects/OpportunityLineItem/fields/DIY_tank_installation_fee__c.field-meta.xml
<CustomField>
    <fullName>DIY_tank_installation_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DIY tank installation fee</description>
    <label>DIY tank installation fee</label>
    <type>Checkbox</type>
</CustomField>