force-app/main/default/objects/OpportunityLineItem/fields/DIY_tank_subscription_fee__c.field-meta.xml
<CustomField>
    <fullName>DIY_tank_subscription_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DIY tank subscription fee</description>
    <label>DIY tank subscription fee</label>
    <type>Checkbox</type>
</CustomField>