force-app/main/default/objects/OpportunityLineItem/fields/End_Disposal_Branch__c.field-meta.xml
<CustomField>
    <fullName>End_Disposal_Branch__c</fullName>
    <description>End Disposal Branch</description>
    <inlineHelpText>Enter final disposal location</inlineHelpText>
    <label>End Disposal Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>End_Disposal_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AG - Aragonite, UT Facility</fullName>
            </value>
            <value>
                <fullName>AL - Altair, TX Facility</fullName>
            </value>
            <value>
                <fullName>BA - Baltimore, MD Facility</fullName>
            </value>
            <value>
                <fullName>BL - Buttonwillow, CA Facility</fullName>
            </value>
            <value>
                <fullName>BN - Baton Rouge, LA Facility</fullName>
            </value>
            <value>
                <fullName>BR - Braintree, MA Facility</fullName>
            </value>
            <value>
                <fullName>CF - Colfax, LA Facility</fullName>
            </value>
            <value>
                <fullName>CG - Chattanooga, TN Facility</fullName>
            </value>
            <value>
                <fullName>CL - Cleveland, OH Facility</fullName>
            </value>
            <value>
                <fullName>DE - Deer Park, TX Facility</fullName>
            </value>
            <value>
                <fullName>DL - Delta, BC Facility</fullName>
            </value>
            <value>
                <fullName>DR - Deer Trail, CO Facility</fullName>
            </value>
            <value>
                <fullName>DU - Clean Harbors San Leon, TX</fullName>
            </value>
            <value>
                <fullName>EL - El Dorado, AR Facility</fullName>
            </value>
            <value>
                <fullName>ETW - EMR - Tacoma - RCRA Facility</fullName>
            </value>
            <value>
                <fullName>FY - Devon Deepwell, Devon AB</fullName>
            </value>
            <value>
                <fullName>GM - Grassy Mountain, UT Facility</fullName>
            </value>
            <value>
                <fullName>KP - Kimball, NE Facility</fullName>
            </value>
            <value>
                <fullName>LB - Lambton, ON Facility</fullName>
            </value>
            <value>
                <fullName>LG - Lone Mountain, OK Facility</fullName>
            </value>
            <value>
                <fullName>LT - La Porte, TX Facility</fullName>
            </value>
            <value>
                <fullName>RY - Ryley, AB Facility</fullName>
            </value>
            <value>
                <fullName>SJ - San Jose, CA Facility</fullName>
            </value>
            <value>
                <fullName>SMR - Smithfield, KY - RC</fullName>
            </value>
			<value>
                <fullName>SPE - Seaport Facility</fullName>
            </value>
            <value>
                <fullName>SU - Corunna, ON Facility (Sarnia)</fullName>
            </value>
            <value>
                <fullName>SW - Sawyer, ND Facility</fullName>
            </value>
            <value>
                <fullName>WC - Bristol, CT Facility</fullName>
            </value>
            <value>
                <fullName>WT - White Castle, LA Facility</fullName>
            </value>
            <value>
                <fullName>Cadence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>