force-app/main/default/objects/OpportunityLineItem/fields/End_Disposal_Method__c.field-meta.xml
<CustomField>
    <fullName>End_Disposal_Method__c</fullName>
    <description>How was will be disposed (Inclination, Fuels Blending, Landfill or Waste Water)</description>
    <inlineHelpText>Enter how waste will be disposed</inlineHelpText>
    <label>End Disposal Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Deepwell</fullName>
            </value>
            <value>
                <fullName>Explosives Management</fullName>
            </value>
            <value>
                <fullName>Fuels Blending</fullName>
            </value>
            <value>
                <fullName>Incineration</fullName>
            </value>
            <value>
                <fullName>Landfill</fullName>
            </value>
            <value>
                <fullName>Recycled Solvent Sales</fullName>
            </value>
            <value>
                <fullName>Solvent Recycling</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Tolling</fullName>
            </value>
            <value>
                <fullName>Waste Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>