force-app/main/default/objects/OpportunityLineItem/fields/Installment_Period__c.field-meta.xml
<CustomField>
    <fullName>Installment_Period__c</fullName>
    <label>Installment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Daily</fullName>
                <isActive>false</isActive>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
                <isActive>false</isActive>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Yearly</fullName>
                <isActive>false</isActive>
                <label>Yearly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>