force-app/main/default/objects/OpportunityLineItem/fields/isClone__c.field-meta.xml
<CustomField>
    <fullName>isClone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isClone</label>
    <type>Checkbox</type>
</CustomField>