force-app/main/default/objects/OpportunityLineItem/fields/Job_Start_Date_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date_Reference__c</fullName>
    <formula>Opportunity.Job_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Start Date Reference</label>
    <type>Date</type>
</CustomField>