force-app/main/default/objects/OpportunityLineItem/fields/KPP_Label__c.field-meta.xml
<CustomField>
    <fullName>KPP_Label__c</fullName>
    <description>Type of Oil Sales</description>
    <label>KPP Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Branded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>