force-app/main/default/objects/OpportunityLineItem/fields/KPP_Oil_Details__c.field-meta.xml
<CustomField>
    <fullName>KPP_Oil_Details__c</fullName>
    <formula>if(isblank(text(KPP_Oil_Product__c)), &quot;&quot;, text(KPP_Oil_Product__c) + &quot; | &quot; + text(KPP_Oil_Family__c) + &quot; | &quot; + text(KPP_Oil_UOM__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPP Oil Details</label>
    <type>Text</type>
</CustomField>