force-app/main/default/objects/OpportunityLineItem/fields/KPP_Oil_Family__c.field-meta.xml
<CustomField>
    <fullName>KPP_Oil_Family__c</fullName>
    <description>Oil Family</description>
    <label>KPP Oil Family</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KPP_Oil_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lube_Family</valueSetName>
    </valueSet>
</CustomField>