force-app/main/default/objects/OpportunityLineItem/fields/KPP_Oil_Product__c.field-meta.xml
<CustomField>
    <fullName>KPP_Oil_Product__c</fullName>
    <description>Oil Product</description>
    <label>KPP Oil Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lube_Product</valueSetName>
    </valueSet>
</CustomField>