force-app/main/default/objects/OpportunityLineItem/fields/KPP_Oil_UOM__c.field-meta.xml
<CustomField>
    <fullName>KPP_Oil_UOM__c</fullName>
    <description>UOM</description>
    <label>KPP Oil UOM</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KPP_Oil_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lube_UOM</valueSetName>
    </valueSet>
</CustomField>