force-app/main/default/objects/OpportunityLineItem/fields/LOB_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>LOB_Business_Unit__c</fullName>
    <formula>text(PricebookEntry.Product2.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOB Business Unit</label>
    <type>Text</type>
</CustomField>