force-app/main/default/objects/OpportunityLineItem/fields/Lube_Details__c.field-meta.xml
<CustomField>
    <fullName>Lube_Details__c</fullName>
    <formula>if (isblank(Direct_Lube_Details__c),  KPP_Oil_Details__c , Direct_Lube_Details__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Details</label>
    <type>Text</type>
</CustomField>