force-app/main/default/objects/OpportunityLineItem/fields/Lube_Family__c.field-meta.xml
<CustomField>
    <fullName>Lube_Family__c</fullName>
    <formula>if (isblank( text(Direct_Lube_Family__c) ),   text(KPP_Oil_Family__c) , text(Direct_Lube_Family__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Family</label>
    <type>Text</type>
</CustomField>