force-app/main/default/objects/OpportunityLineItem/fields/Lube_Oil_Type__c.field-meta.xml
<CustomField>
    <fullName>Lube_Oil_Type__c</fullName>
    <description>Safety-Kleen Branch Services type of Lube Oil Sold</description>
    <inlineHelpText>Safety-Kleen Branch Services type of Lube Oil Sold</inlineHelpText>
    <label>Lube Oil Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>Packaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>