force-app/main/default/objects/OpportunityLineItem/fields/Lube_Ok__c.field-meta.xml
<CustomField>
    <fullName>Lube_Ok__c</fullName>
    <formula>if(or(not(isblank( Direct_Lube_Details__c )),not(isblank( KPP_Oil_Details__c ))), &quot;Good - Family Entered&quot;, &quot;Bad - Family Not Entered&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Ok</label>
    <type>Text</type>
</CustomField>