force-app/main/default/objects/OpportunityLineItem/fields/Lube_Product__c.field-meta.xml
<CustomField>
    <fullName>Lube_Product__c</fullName>
    <formula>if (isblank( text(Direct_Lube_Product__c) ),   text(KPP_Oil_Product__c) , text(Direct_Lube_Product__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Product</label>
    <type>Text</type>
</CustomField>