force-app/main/default/objects/OpportunityLineItem/fields/Lube_UOM__c.field-meta.xml
<CustomField>
    <fullName>Lube_UOM__c</fullName>
    <formula>if (isblank( text( Direct_Lube_UOM__c ) ),   text( KPP_Oil_UOM__c ) , text(Direct_Lube_UOM__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube UOM</label>
    <type>Text</type>
</CustomField>