force-app/main/default/objects/OpportunityLineItem/fields/My_Branch_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>My_Branch_Opportunities__c</fullName>
    <description>References the Users Sales Branch code or secondary sales branch code</description>
    <formula>IF(  
or(
 Branch__r.Branch_Code__c =  $User.Sales_Branch__c
, Branch__r.Branch_Code__c  =   $User.Secondary_Sales_Branch__c 
, $Profile.Name = &apos;Integration&apos;
, $Profile.Name = &apos;Salesforce API Only System Integrations&apos;
, $Profile.Name = &apos;Sales Operations&apos;
) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Branch Opportunities</label>
    <type>Checkbox</type>
</CustomField>