force-app/main/default/objects/OpportunityLineItem/fields/No_Account_Revenue_in_12_Months__c.field-meta.xml
<CustomField>
    <fullName>No_Account_Revenue_in_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the account entered on the opportunity had revenue since the first day of the prior year.</description>
    <inlineHelpText>Indicates if the account entered on the opportunity had revenue since the first day of the prior year.</inlineHelpText>
    <label>New Account Opportunity</label>
    <type>Checkbox</type>
</CustomField>