force-app/main/default/objects/OpportunityLineItem/fields/No_LOB_Revenue_in_12_Months__c.field-meta.xml
<CustomField>
    <fullName>No_LOB_Revenue_in_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the LOB entered on the opportunity had revenue since the first day of the prior year.  If it does not have revenue it is flagged as a LOB Cross Sell.</description>
    <inlineHelpText>Indicates if the LOB entered on the opportunity had revenue since the first day of the prior year.  If it does not have revenue it is flagged as a LOB Cross Sell.</inlineHelpText>
    <label>New LOB Opportunity</label>
    <type>Checkbox</type>
</CustomField>