force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Category__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Category__c</fullName>
    <description>Indicates new or existing account and opportunity</description>
    <formula>if(and(No_Account_Revenue_in_12_Months__c = True,  No_LOB_Revenue_in_12_Months__c = True),&quot;New Account&quot;,
if(and(No_Account_Revenue_in_12_Months__c = False,  No_LOB_Revenue_in_12_Months__c = True),&quot;Existing Account with New LOB&quot;,
if(and(No_Account_Revenue_in_12_Months__c = False,  No_LOB_Revenue_in_12_Months__c = False),&quot;Existing Account with Existing LOB&quot;,
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Category</label>
    <type>Text</type>
</CustomField>