force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created_Date__c</fullName>
    <formula>Opportunity.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity CreatedDate</label>
    <type>Date</type>
</CustomField>