force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Product_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Id_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Product Id 18</label>
    <type>Text</type>
</CustomField>