force-app/main/default/objects/OpportunityLineItem/fields/Parts_Washer_Type__c.field-meta.xml
<CustomField>
    <fullName>Parts_Washer_Type__c</fullName>
    <description>List of parts washer types</description>
    <inlineHelpText>Select when entering a parts washer product</inlineHelpText>
    <label>Parts Washer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>EAC</fullName>
            </value>
            <value>
                <fullName>Equipment Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>