force-app/main/default/objects/OpportunityLineItem/fields/PFAS__c.field-meta.xml
<CustomField>
    <fullName>PFAS__c</fullName>
    <description>List of PFAS types</description>
    <label>PFAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sampling</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Drinking Water Solutions</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Industrial Water Solutions</fullName>
            </value>
            <value>
                <fullName>Soil Remediation</fullName>
            </value>
            <value>
                <fullName>AFF Management</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Disposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>