force-app/main/default/objects/OpportunityLineItem/fields/Price_Per_Gallon__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Gallon__c</fullName>
    <formula>if (Product_Gallons__c &gt; 0 , (TotalPrice / Product_Gallons__c), 0)</formula>
    <label>Price Per Gallon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>